--- a/app/app.css
+++ b/app/app.css
@@ -73,7 +73,7 @@
     @apply text-red-500 text-base font-medium text-center;
   }
   .all-users {
-    @apply w-full min-h-screen  flex flex-col gap-10;
+    @apply w-full min-h-screen flex flex-col gap-10;
   }
 
   .stats-card {
@@ -438,7 +438,7 @@
     @apply text-sm md:text-base font-semibold;
   }
   .button-class {
-    @apply !bg-primary-100 !px-4 !rounded-lg !flex !items-center !justify-center !gap-1.5 !shadow-none;
+    @apply !bg-primary-100 !px-4 !rounded-lg !flex !items-center !justify-center !mx-auto !gap-1.5 !shadow-none;
   }
   .button-class-secondary {
     @apply !bg-white !px-4 !rounded-lg !flex !items-center !justify-center !gap-1.5 !shadow-sm;
